==> BM4GIT/DeviceLib/Library/Raspberry/FileSystem/pn532.cpp <==
#include "pn532.h"

bool Rfid::readdata( uint8_t* buff, uint8_t n)
{
  // Wait for chip to say its ready!
  if ( !waitready( 100) ) {
    return false;
  }

  uint8_t buf[n+2];
  memset( buf, 0, n+2);
    Wire.requestFrom( PN532_I2C_ADDRESS, n+2);
    int i = 0;
    while ( Wire.available() && (i < n+2) ) {
        buf[i] = Wire.read();
        i++;
    }
  // Discard the leading 0x01 and trailing 0x00
  memcpy( buff, &buf[1], n);

  return (i == n+2);
}

bool Rfid::writecommand(uint8_t* cmd, uint8_t cmdlen)
{
  uint8_t checksum = PN532_PREAMBLE + PN532_STARTCODE1 + PN532_STARTCODE2;

  cmdlen++;

  uint8_t buf[cmdlen+7];
  buf[0] = PN532_PREAMBLE;
  buf[1] = PN532_STARTCODE1;
  buf[2] = PN532_STARTCODE2;
  buf[3] = cmdlen;
  buf[4] = ~cmdlen + 1;
  buf[5] = PN532_HOSTTOPN532;

  checksum = PN532_HOSTTOPN532;

  uint8_t i;
  for ( i=0; i < cmdlen - 1; i++ ) {
    buf[6+i] = cmd[i];
    checksum += cmd[i];
  }
  buf[6+i] = (uint8_t) ~checksum + 1;
  buf[7+i] = (uint8_t) PN532_POSTAMBLE;

  Wire.beginTransmission( (uint8_t) PN532_I2C_ADDRESS);
  Wire.write( buf, 8+i);
  if ( !Wire.endTransmission() )
    return false;
  return true;
}

void Rfid::begin( uint8_t irq, uint8_t reset)
{
  _irq = irq;
  _reset = reset;
  pinMode( _irq, INPUT);
  pinMode( _reset, OUTPUT);
  pinMode( 21, OUTPUT);

  // I2C initialization.
#ifndef RPI
  Wire.setClock( 100000);
#endif
  Wire.begin();

  // Reset the PN532
  digitalWrite( _reset, HIGH);
  digitalWrite( _reset, LOW);
  delay( 50);
  digitalWrite( _reset, HIGH);

  // Small delay required before taking other actions after reset.
  // See timing diagram on page 209 of the datasheet, section 12.23.
}

uint32_t Rfid::getFirmwareVersion()
{
  uint32_t response;
  pn532_packetbuffer[0] = PN532_COMMAND_GETFIRMWAREVERSION;

  if ( !sendCommandCheckAck(pn532_packetbuffer, 1) )
    return 0;

  // read data packet
  readdata( pn532_packetbuffer, 12);

  // check some basic stuff
  if ( strncmp((char *)pn532_packetbuffer, (char *)pn532response_firmwarevers, 6) != 0 ) {
    Serial.println( "Error: Firmware doesn't match.");
    return 0;
  }

  int offset = 7;  // Skip a response uint8_t when using I2C to ignore extra data.
  response = pn532_packetbuffer[offset++];
  response <<= 8;
  response |= pn532_packetbuffer[offset++];
  response <<= 8;
  response |= pn532_packetbuffer[offset++];
  response <<= 8;
  response |= pn532_packetbuffer[offset++];

  return response;
}

bool Rfid::SAMConfig()
{
  pn532_packetbuffer[0] = PN532_COMMAND_SAMCONFIGURATION;
  pn532_packetbuffer[1] = 0x01; // normal mode;
  pn532_packetbuffer[2] = 0x14; // timeout 50ms * 20 = 1 second
  pn532_packetbuffer[3] = 0x01; // use IRQ pin!

  if ( !sendCommandCheckAck( pn532_packetbuffer, 4) ) {
    return false;
  }

  // read data packet
  if ( !readdata( pn532_packetbuffer, 8) ||
        (pn532_packetbuffer[6] != 0x15) ) {
    return false;
  }

  return true;
}
